--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "firebase": "^7.24.0",
     "gatsby": "^2.26.1",
     "gatsby-firesource": "^2.0.3",
     "gatsby-image": "^2.5.0",
